remove html/body height 100% to fix margin-bottom error on mobile

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -5,7 +5,6 @@
 /* avoid landscape zoom-in on mobile */
 html {
   -webkit-text-size-adjust: none;
-  height: 100%;
 }
 
 body {
@@ -14,7 +13,6 @@ body {
   line-height: 1.3;
   margin: auto;
   padding: 1em;
-  height: 100%;
 }
 
 .text-content {
